--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.4",
     "bootstrap": "^5.3.3",
     "ESLint": "npm:eslint@^8.57.0",
+    "primevue": "^4.0.4",
     "vue": "^3.4.29"
   },
   "devDependencies": {
